--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-plugin-sharp": "^2.2.3",
     "gatsby-plugin-styled-components": "^3.1.0",
+    "gatsby-plugin-twitter": "^2.1.10",
     "gatsby-remark-images": "^3.1.2",
     "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-source-airtable": "^2.0.8",
+    "gatsby-source-airtable": "^2.0.9",
     "gatsby-source-contentful": "^2.1.3",
     "gatsby-source-filesystem": "^2.1.1",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
