--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.4",
+    "gatsby-plugin-google-analytics": "^2.1.21",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.0",
