--- a/package.json
+++ b/package.json
@@ -36,15 +36,17 @@
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-twitter": "^2.1.10",
     "gatsby-remark-images": "^3.1.2",
+    "gatsby-remark-prismjs": "^3.3.20",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-airtable": "^2.0.9",
     "gatsby-source-contentful": "^2.1.3",
     "gatsby-source-filesystem": "^2.1.1",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
-    "gatsby-transformer-remark": "^2.5.0",
+    "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.2.1",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
