--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-starter-hello-world",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A simple WebSite for Gatsby",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -24,7 +24,7 @@
     "bootstrap": "^4.3.1",
     "contentful": "^7.9.1",
     "dotenv": "^8.0.0",
-    "gatsby": "^2.10.4",
+    "gatsby": "^2.16.3",
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-background-image": "^0.8.0",
     "gatsby-image": "^2.2.4",
@@ -40,7 +40,7 @@
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-airtable": "^2.0.9",
     "gatsby-source-contentful": "^2.1.3",
-    "gatsby-source-filesystem": "^2.1.1",
+    "gatsby-source-filesystem": "^2.1.33",
     "gatsby-source-prismic": "^2.3.0-alpha.3",
     "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.2.1",
@@ -64,7 +64,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/IoT-Arduino"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
