--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby": "^2.16.3",
     "gatsby-awesome-pagination": "^0.3.4",
     "gatsby-background-image": "^0.8.0",
+    "gatsby-cli": "^2.8.4",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-google-analytics": "^2.1.21",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
