--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/core": "^4.3.1",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "contentful": "^7.9.1",
     "dotenv": "^8.0.0",
     "gatsby": "^2.16.3",
@@ -49,6 +50,7 @@
     "node-sass": "^4.12.0",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
